--- a/app/src/main/res/layout/activity_feature_list.xml
+++ b/app/src/main/res/layout/activity_feature_list.xml
@@ -14,5 +14,6 @@
         android:paddingRight="12dp"
         android:divider="@color/no_color"
         android:dividerHeight="12dp"
-        android:listSelector="@color/no_color" />
+        android:listSelector="@color/no_color"
+        android:scrollbars="none"/>
 </LinearLayout>
